--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+
+branches:
+  only:
+    - master
+
+xcode_workspace: OND.xcworkspace
+xcode_scheme: OND-Example
+osx_image: xcode7.3
+xcode_sdk: iphonesimulator9.3
+
 script:
-- set -o pipefail && xcodebuild test -workspace Example/OND.xcworkspace -scheme OND-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - xcodebuild test -project -workspace Example/OND.xcworkspace -scheme OND-Example -destination "platform=iOS Simulator,name=iPhone 6s"
